--- a/config/os/macos/morph/base.dtsi
+++ b/config/os/macos/morph/base.dtsi
@@ -4,5 +4,5 @@ mp_key_q: morph_key_quote {
     compatible = "zmk,behavior-mod-morph";
     #binding-cells = <0>;
     mods = <(MOD_LSFT|MOD_RSFT)>;
-    bindings = <&m_mi_s>, <&m_mi_d>;
+    bindings = <&m_locale_s>, <&m_locale_d>;
 };
