--- a/config/os/macos/combos/base.dtsi
+++ b/config/os/macos/combos/base.dtsi
@@ -1,12 +1,12 @@
 combo_mCW_on {
-    bindings = <&caps_word_ON>;
+    bindings = <&m_caps_word_ON>;
     key-positions = <13 16>;
     slow-release;
     layers = <mBAS>;
 };
 
 combo_mCW_off {
-    bindings = <&caps_word_OFF>;
+    bindings = <&m_caps_word_OFF>;
     key-positions = <11 18>;
     slow-release;
     layers = <mBAS>;
