--- a/config/os/macos/macros/base.dtsi
+++ b/config/os/macos/macros/base.dtsi
@@ -1,4 +1,4 @@
-caps_word_CAPS: caps_word_CAPS {
+m_caps_word_CAPS: m_caps_word_CAPS {
     compatible = "zmk,behavior-macro";
     #binding-cells = <0>;
     tap-ms = <MC_TAP>;
@@ -7,7 +7,7 @@ caps_word_CAPS: caps_word_CAPS {
         , <&kp CAPS>;
 };
 
-caps_word_ON: caps_word_ON {
+m_caps_word_ON: m_caps_word_ON {
     compatible = "zmk,behavior-macro";
     #binding-cells = <0>;
     bindings
@@ -15,7 +15,7 @@ caps_word_ON: caps_word_ON {
         , <&cw>;
 };
 
-caps_word_OFF: caps_word_OFF {
+m_caps_word_OFF: m_caps_word_OFF {
     compatible = "zmk,behavior-macro";
     #binding-cells = <0>;
     bindings
