rename: update combo names to remove m_ prefix

--- a/config/os/macos/combos/base.dtsi
+++ b/config/os/macos/combos/base.dtsi
@@ -1,11 +1,11 @@
-combo_mCW_on {
+combo_CW_on {
     bindings = <&m_caps_word_ON>;
     key-positions = <13 16>;
     slow-release;
     layers = <mBAS>;
 };
 
-combo_mCW_off {
+combo_CW_off {
     bindings = <&m_caps_word_OFF>;
     key-positions = <11 18>;
     slow-release;
