--- a/config/os/macos/morph/layers.dtsi
+++ b/config/os/macos/morph/layers.dtsi
@@ -5,7 +5,7 @@ mp_key_bas: morph_key_bas_layer {
     compatible = "zmk,behavior-mod-morph";
     #binding-cells = <0>;
     mods = <(MOD_LSFT|MOD_RSFT)>;
-    bindings = <&to_mBAS_kp 0 ESC>, <&m_caps_word_CAPS>;
+    bindings = <&to_BAS_kp 0 ESC>, <&m_caps_word_CAPS>;
 };
 
 // tap:      right arrow       
@@ -15,7 +15,7 @@ mp_key_dev_right: morph_mac_key_dev_right_layer {
     compatible = "zmk,behavior-mod-morph";
     #binding-cells = <0>;
     mods = <(MOD_LSFT|MOD_RSFT)>;
-    bindings = <&mo_mDEV_to_mBAS_kp 0 RIGHT>, <&to_mDEV>;
+    bindings = <&mo_DEV_to_BAS_kp 0 RIGHT>, <&to_mDEV>;
 };
 
 // tap:      tab       
@@ -25,7 +25,7 @@ mp_key_axn: morph_mac_key_axn_layer {
     compatible = "zmk,behavior-mod-morph";
     #binding-cells = <0>;
     mods = <(MOD_LSFT|MOD_RSFT)>;
-    bindings = <&mo_mAXN_to_mBAS_kp 0 TAB>, <&to_mAXN>;
+    bindings = <&mo_AXN_to_BAS_kp 0 TAB>, <&to_mAXN>;
 };
 
 // tap:      backspace       
@@ -35,7 +35,7 @@ mp_key_fnk: morph_mac_key_fnk_layer {
     compatible = "zmk,behavior-mod-morph";
     #binding-cells = <0>;
     mods = <(MOD_LSFT|MOD_RSFT)>;
-    bindings = <&mo_mAXN_to_mBAS_kp 0 BSPC>, <&to_mFNK>;
+    bindings = <&mo_AXN_to_BAS_kp 0 BSPC>, <&to_mFNK>;
 };
 
 // tap:      delete    
@@ -45,7 +45,7 @@ mp_key_dev_left: morph_mac_key_dev_left_layer {
     compatible = "zmk,behavior-mod-morph";
     #binding-cells = <0>;
     mods = <(MOD_LSFT|MOD_RSFT)>;
-    bindings = <&mo_mDEV_to_mBAS_kp 0 DEL>, <&to_mDEV>;
+    bindings = <&mo_DEV_to_BAS_kp 0 DEL>, <&to_mDEV>;
 };
 
 // long-tap: to STG momentary
