--- a/config/os/macos/macros/base.dtsi
+++ b/config/os/macos/macros/base.dtsi
@@ -3,7 +3,7 @@ m_caps_word_CAPS: m_caps_word_CAPS {
     #binding-cells = <0>;
     tap-ms = <MC_TAP>;
     bindings
-        = <&kp LS(H_mCWR)>
+        = <&kp LS(FK_CWR)>
         , <&kp CAPS>;
 };
 
@@ -11,7 +11,7 @@ m_caps_word_ON: m_caps_word_ON {
     compatible = "zmk,behavior-macro";
     #binding-cells = <0>;
     bindings
-        = <&kp LA(H_mCWR)>
+        = <&kp LA(FK_CWR)>
         , <&cw>;
 };
 
@@ -19,6 +19,6 @@ m_caps_word_OFF: m_caps_word_OFF {
     compatible = "zmk,behavior-macro";
     #binding-cells = <0>;
     bindings
-        = <&kp LS(LC(H_mCWR))>
+        = <&kp LS(LC(FK_CWR))>
         , <&kp K_CANCEL>;
 };
