--- a/config/os/macos/morph/layers.dtsi
+++ b/config/os/macos/morph/layers.dtsi
@@ -11,7 +11,7 @@ mp_key_bas: morph_key_bas_layer {
 // tap:      right arrow       
 // long-tap: to DEV momentary
 // shift:    to DEV layer
-mp_key_dev_right: morph_mac_key_dev_right_layer {
+mp_key_dev_right: morph_key_dev_right_layer {
     compatible = "zmk,behavior-mod-morph";
     #binding-cells = <0>;
     mods = <(MOD_LSFT|MOD_RSFT)>;
@@ -21,7 +21,7 @@ mp_key_dev_right: morph_mac_key_dev_right_layer {
 // tap:      tab       
 // long-tap: to AXN momentary
 // shift:    to AXN layer
-mp_key_axn: morph_mac_key_axn_layer {
+mp_key_axn: morph_key_axn_layer {
     compatible = "zmk,behavior-mod-morph";
     #binding-cells = <0>;
     mods = <(MOD_LSFT|MOD_RSFT)>;
@@ -31,7 +31,7 @@ mp_key_axn: morph_mac_key_axn_layer {
 // tap:      backspace       
 // long-tap: to AXN momentary
 // shift:    to FNK layer
-mp_key_fnk: morph_mac_key_fnk_layer {
+mp_key_fnk: morph_key_fnk_layer {
     compatible = "zmk,behavior-mod-morph";
     #binding-cells = <0>;
     mods = <(MOD_LSFT|MOD_RSFT)>;
@@ -41,7 +41,7 @@ mp_key_fnk: morph_mac_key_fnk_layer {
 // tap:      delete    
 // long-tap: to DEV momentary
 // shift:    to DEV layer
-mp_key_dev_left: morph_mac_key_dev_left_layer {
+mp_key_dev_left: morph_key_dev_left_layer {
     compatible = "zmk,behavior-mod-morph";
     #binding-cells = <0>;
     mods = <(MOD_LSFT|MOD_RSFT)>;
@@ -50,7 +50,7 @@ mp_key_dev_left: morph_mac_key_dev_left_layer {
 
 // long-tap: to STG momentary
 // shift:    to STG layer
-mp_key_stg: morph_mac_stg_layer {
+mp_key_stg: morph_stg_layer {
     compatible = "zmk,behavior-mod-morph";
     #binding-cells = <0>;
     mods = <(MOD_LSFT|MOD_RSFT)>;
