--- a/config/os/macos/hold/settings.dtsi
+++ b/config/os/macos/hold/settings.dtsi
@@ -1,4 +1,4 @@
-HR_HOLD(STG, LC, m_s_b3)              //hm_STG_LC
-HR_HOLD(STG, LS, mp_STG_screenshot)  //hm_STG_LS
-HR_HOLD(STG, RS, mp_STG_left)        //hm_STG_RS
-HR_HOLD(STG, RA, mp_STG_rectangle)   //hm_STG_RA
+HOLD_HR(STG, LC, m_s_b3)              //hm_STG_LC
+HOLD_HR(STG, LS, mp_STG_screenshot)  //hm_STG_LS
+HOLD_HR(STG, RS, mp_STG_left)        //hm_STG_RS
+HOLD_HR(STG, RA, mp_STG_rectangle)   //hm_STG_RA
