--- a/config/os/macos/hold/layers.dtsi
+++ b/config/os/macos/hold/layers.dtsi
@@ -3,7 +3,7 @@ to_BAS_kp: to_BAS_kp {
     #binding-cells = <2>;
     tapping-term-ms = <HP_TAPPING>;
     flavor = "hold-preferred";
-    bindings = <&to_mBAS>, <&kp>;
+    bindings = <&to_BAS>, <&kp>;
 };
 
 mo_DEV_to_BAS_kp: mo_DEV_to_BAS_kp {
@@ -11,7 +11,7 @@ mo_DEV_to_BAS_kp: mo_DEV_to_BAS_kp {
     #binding-cells = <2>;
     tapping-term-ms = <HP_TAPPING>;
     flavor = "hold-preferred";
-    bindings = <&mo_mDEV_to_mBAS>, <&kp>;
+    bindings = <&mo_DEV_to_BAS>, <&kp>;
 };
 
 mo_AXN_to_BAS_kp: mo_AXN_to_BAS_kp {
@@ -19,7 +19,7 @@ mo_AXN_to_BAS_kp: mo_AXN_to_BAS_kp {
     #binding-cells = <2>;
     tapping-term-ms = <HP_TAPPING>;
     flavor = "hold-preferred";
-    bindings = <&mo_mAXN_to_mBAS>, <&kp>;
+    bindings = <&mo_AXN_to_BAS>, <&kp>;
 };
 
 mo_STG_to_BAS_kp: mo_STG_to_BAS_kp {
@@ -27,5 +27,5 @@ mo_STG_to_BAS_kp: mo_STG_to_BAS_kp {
     #binding-cells = <2>;
     tapping-term-ms = <HP_TAPPING>;
     flavor = "hold-preferred";
-    bindings = <&mo_mSTG_to_mBAS>, <&kp>;
+    bindings = <&mo_STG_to_BAS>, <&kp>;
 };
