renombrar: corregir la definición de la macro TO_MACRO para mejorar la consistencia

--- a/config/helpers/macros.dtsi
+++ b/config/helpers/macros.dtsi
@@ -23,10 +23,10 @@
  */
 
 #define TO_MACRO(TO)                            \
-    to_##TO##: to_##TO##_layer {                    \
-        compatible = "zmk,behavior-macro";          \
-        #binding-cells = <0>;                       \
-        bindings = <&to ##TO## &kp FK_##TO##>;    \
+    to_##TO##: to_##TO##_layer {                \
+        compatible = "zmk,behavior-macro";      \
+        #binding-cells = <0>;                   \
+        bindings = <&to TO &kp FK_##TO##>;  \
     };
 
 /*
@@ -67,4 +67,4 @@
             , <&macro_release &mo ##MO##>                           \
             , <&macro_tap &kp FK_##TO##>;                             \
     };
-  
+  >
