renombrar: mover las definiciones de las teclas de coma y punto a la configuración de macOS y eliminar la referencia de la configuración compartida

--- a/config/os/macos/morph/base.dtsi
+++ b/config/os/macos/morph/base.dtsi
@@ -6,3 +6,21 @@ mp_key_q: morph_key_quote {
     mods = <(MOD_LSFT|MOD_RSFT)>;
     bindings = <&m_locale_s>, <&m_locale_d>;
 };
+
+// tap:     ,
+// shift:   ;
+mp_key_cs: morph_key_comma_semi {
+    compatible = "zmk,behavior-mod-morph";
+    #binding-cells = <0>;
+    mods = <(MOD_LSFT|MOD_RSFT)>;
+    bindings = <&kp COMMA>, <&kp SEMICOLON>;
+};
+
+// tap:     .
+// shift:   :
+mp_key_dc: morph_key_dot_colon {
+    compatible = "zmk,behavior-mod-morph";
+    #binding-cells = <0>;
+    mods = <(MOD_LSFT|MOD_RSFT)>;
+    bindings = <&kp DOT>, <&kp COLON>;
+};
