renombrar: mover la definición de la tecla menos a la configuración de macOS y eliminar el archivo num.dtsi

--- a/config/os/macos/morph/actions.dtsi
+++ b/config/os/macos/morph/actions.dtsi
@@ -24,3 +24,12 @@ mp_action_paste: morph_action_paste {
     mods = <(MOD_LSFT|MOD_RSFT)>;
     bindings = <&kp RG(V)>, <&kp RS(RG(V))>;
 };
+
+// tap:     -
+// shift:   _
+mp_key_m: morph_key_minus {
+    compatible = "zmk,behavior-mod-morph";
+    #binding-cells = <0>;
+    mods = <(MOD_LSFT|MOD_RSFT)>;
+    bindings = <&kp MINUS>, <&kp UNDER>;
+};
