--- a/config/boards/shields/totem/totem.dtsi
+++ b/config/boards/shields/totem/totem.dtsi
@@ -10,7 +10,7 @@
 / {
     chosen {
         zmk,kscan = &kscan0;
-        zmk,physical-layout = &physical_layout;
+        zmk,physical-layout = &default_layout;
     };
 
     default_transform: keymap_transform_0 {
