--- a/config/keyboard/morph/layers.dtsi
+++ b/config/keyboard/morph/layers.dtsi
@@ -1,6 +1,6 @@
-// tap:      escape      
-// long-tap: to BAS layer
-// shift:    caps lock
+// tap:   escape      
+// hold:  to BAS layer
+// shift: caps lock
 mp_key_bas: morph_key_bas_layer {
     compatible = "zmk,behavior-mod-morph";
     #binding-cells = <0>;
@@ -8,52 +8,51 @@ mp_key_bas: morph_key_bas_layer {
     bindings = <&to_BAS_kp 0 ESC>, <&m_caps_word_CAPS>;
 };
 
-// tap:      right arrow       
-// long-tap: to DEV momentary
-// shift:    to DEV layer
+// tap:   right arrow       
+// hold:  to DEV momentary
+// alt:   to DEV layer
 mp_key_dev_right: morph_key_dev_right_layer {
     compatible = "zmk,behavior-mod-morph";
     #binding-cells = <0>;
-    mods = <(MOD_LSFT|MOD_RSFT)>;
+    mods = <(MOD_LALT)>;
     bindings = <&mo_DEV_to_BAS_kp 0 RIGHT>, <&to_DEV>;
 };
 
-// tap:      tab       
-// long-tap: to AXN momentary
-// shift:    to AXN layer
+// tap:   tab       
+// hold:  to AXN momentary
+// alt:   to AXN layer
 mp_key_axn: morph_key_axn_layer {
     compatible = "zmk,behavior-mod-morph";
     #binding-cells = <0>;
-    mods = <(MOD_LSFT|MOD_RSFT)>;
+    mods = <(MOD_LALT)>;
     bindings = <&mo_AXN_to_BAS_kp 0 TAB>, <&to_AXN>;
 };
 
-// tap:      backspace       
-// long-tap: to AXN momentary
-// shift:    to FNK layer
+// tap:  backspace       
+// hold: to AXN momentary
+// alt:  to FNK layer
 mp_key_fnk: morph_key_fnk_layer {
     compatible = "zmk,behavior-mod-morph";
     #binding-cells = <0>;
-    mods = <(MOD_LSFT|MOD_RSFT)>;
+    mods = <(MOD_LALT)>;
     bindings = <&mo_AXN_to_BAS_kp 0 BSPC>, <&to_FNK>;
 };
 
-// tap:      delete    
-// long-tap: to DEV momentary
-// shift:    to DEV layer
+// tap:  delete    
+// hold: to DEV momentary
+// alt:  to DEV layer
 mp_key_dev_left: morph_key_dev_left_layer {
     compatible = "zmk,behavior-mod-morph";
     #binding-cells = <0>;
-    mods = <(MOD_LSFT|MOD_RSFT)>;
+    mods = <(MOD_LALT)>;
     bindings = <&mo_DEV_to_BAS_kp 0 DEL>, <&to_DEV>;
 };
 
-// long-tap: to STG momentary
-// shift:    to STG layer
+// hold:  to STG momentary
+// alt:   to STG layer
 mp_key_stg: morph_stg_layer {
     compatible = "zmk,behavior-mod-morph";
     #binding-cells = <0>;
-    mods = <(MOD_LSFT|MOD_RSFT)>;
+    mods = <(MOD_LALT)>;
     bindings = <&mo_STG_to_BAS>, <&to_STG>;
 };
-
