--- a/config/keyboard/keymap.dtsi
+++ b/config/keyboard/keymap.dtsi
@@ -36,14 +36,14 @@
             #define MBBR1  &mp_key_q                     // tap: ' ¦ shift: "
 
             #define MBTL0  MKY_ESC                       // tap: escape      ¦ shift: caps lock    ¦ hold: BAS layer
-            #define MBTL1  &mp_key_dev_right             // tap: right arrow ¦ shift: to DEV layer ¦ long-tap: to DEV momentary
+            #define MBTL1  &mp_key_dev_right             // tap: right arrow ¦ alt: to DEV layer   ¦ hold: to DEV momentary
             #define MBTL2  KEY_SPC                       // tap: blank space
-            #define MBTL3  &mp_key_axn                   // tap: tab         ¦ shift: to AXN layer ¦ long-tap: to AXN momentary
+            #define MBTL3  &mp_key_axn                   // tap: tab         ¦ alt: to AXN layer   ¦ hold: to AXN momentary
 
-            #define MBTR3  &mp_key_fnk                   // tap: back space  ¦ shift: to AXN layer ¦ long-tap: to FNK momentary
+            #define MBTR3  &mp_key_fnk                   // tap: back space  ¦ alt: to AXN layer   ¦ hold: to FNK momentary
             #define MBTR2  MKY_RET                       // tap: return      ¦                     ¦ hold: F2 (easy rename on ide)                  
-            #define MBTR1  &mp_key_dev_left              // tap: delete      ¦ shift: to DEV layer ¦ long-tap: to DEV momentary
-            #define MBTR0  &mp_key_stg                   //                  ¦ shift: to STG layer ¦ long-tap: to STG momentary
+            #define MBTR1  &mp_key_dev_left              // tap: delete      ¦ alt: to DEV layer   ¦ hold: to DEV momentary
+            #define MBTR0  &mp_key_stg                   //                  ¦ alt: to STG layer   ¦ hold: to STG momentary
 
 
             display-name = "BAS";
