--- a/config/keyboard/keys.dtsi
+++ b/config/keyboard/keys.dtsi
@@ -1,12 +1,12 @@
 #define KEY_SPC  &kp  SPACE
 
-// tap:      escape       
-// long-tap: BAS layer
-// shift:    caps lock
+// tap:   escape       
+// hold:  BAS layer
+// shift: caps lock
 #define MKY_ESC  &mp_key_bas
 
-// tap: return
-// long-tap: F2 (easy rename on ide)
+// tap:  return
+// hold: F2 (easy rename on ide)
 #define MKY_RET  &mt  F2  RET
 
 /* Side Key Positions */
