--- a/config/keyboard/combos/base.dtsi
+++ b/config/keyboard/combos/base.dtsi
@@ -24,5 +24,5 @@ combo_to_STG {
     bindings = <&mo_STG_to_BAS>;
     key-positions = <34 35>;
     slow-release;
-    layers = <mBAS>;
+    layers = <BAS>;
 };
