--- a/config/keyboard/keymap.dtsi
+++ b/config/keyboard/keymap.dtsi
@@ -40,7 +40,7 @@
             #define MBTL2  KEY_SPC                       // tap: blank space
             #define MBTL3  &mp_BAS_al                    // tap: tab         ¦ alt+shift: to AXN layer  ¦ hold: to AXN momentary
 
-            #define MBTR3  &mp_key_fnk                   // tap: back space  ¦ alt: to AXN layer        ¦ hold: to FNK momentary
+            #define MBTR3  &mp_BAS_ar                    // tap: backspace   ¦ alt+shift: to AXN layer  ¦ hold: to FNK momentary
             #define MBTR2  MKY_RET                       // tap: return      ¦                          ¦ hold: F2 (easy rename on ide)                  
             #define MBTR1  &mp_key_dev_left              // tap: delete      ¦ alt: to DEV layer        ¦ hold: to DEV momentary
             #define MBTR0  &mp_key_stg                   //                  ¦ alt: to STG layer        ¦ hold: to STG momentary
