feat: change layer keys with combos

--- a/config/keyboard/keymap.dtsi
+++ b/config/keyboard/keymap.dtsi
@@ -35,14 +35,14 @@
             #define MBBR2  &mp_key_dc                    // tap: . ¦ shift: :
             #define MBBR1  &mp_key_q                     // tap: ' ¦ shift: "
 
-            #define MBTL0  MKY_ESC                       // tap: escape      ¦ shift: caps lock         ¦ hold: BAS layer
-            #define MBTL1  &mp_BAS_dl                    // tap: right arrow ¦ alt+shift: to DEV layer  ¦ hold: to DEV momentary
+            #define MBTL0  MKY_ESC                       // tap: escape      ¦ shift: caps lock         ¦ hold: to BAS layer
+            #define MBTL1  &mo_DEV_to_BAS_kp 0 RIGHT,    // tap: right arrow ¦                          ¦ hold: to DEV momentary
             #define MBTL2  KEY_SPC                       // tap: blank space
-            #define MBTL3  &mp_BAS_al                    // tap: tab         ¦ alt+shift: to AXN layer  ¦ hold: to AXN momentary
+            #define MBTL3  &mp_BAS_al                    // tap: tab         ¦                          ¦ hold: to AXN momentary
 
-            #define MBTR3  &mp_BAS_ar                    // tap: backspace   ¦ alt+shift: to AXN layer  ¦ hold: to FNK momentary
+            #define MBTR3  &mo_AXN_to_BAS_kp 0 BSPC,     // tap: backspace   ¦                          ¦ hold: to AXN momentary
             #define MBTR2  MKY_RET                       // tap: return      ¦                          ¦ hold: F2 (easy rename on ide)                  
-            #define MBTR1  &mp_BAS_dr                    // tap: delete      ¦ alt+shift: to DEV layer  ¦ hold: to DEV momentary
+            #define MBTR1  &mo_DEV_to_BAS_kp 0 DEL,      // tap: delete      ¦                          ¦ hold: to DEV momentary
             #define MBTR0  &mp_BAS_sr                    //                  ¦ alt+shift: to STG layer  ¦ hold: to STG momentary
 
 
